dashboard/static/css/base.scss
@font-face {
    font-family: 'Open Sans';
    src: url('../../fonts/OpenSans-Regular.eot');
    src: url('../../fonts/OpenSans-Regular.eot?#iefix') format('embedded-opentype'),
        url('../../fonts/OpenSans-Regular.woff') format('woff'),
        url('../../fonts/OpenSans-Regular.ttf') format('truetype'),
        url('../../fonts/OpenSans-Regular.svg#open_sans') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Open Sans';
    src: url('../../fonts/OpenSans-Bold.eot');
    src: url('../../fonts/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
        url('../../fonts/OpenSans-Bold.woff') format('woff'),
        url('../../fonts/OpenSans-Bold.ttf') format('truetype'),
        url('../../fonts/OpenSans-Bold.svg#open_sansbold') format('svg');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'Open Sans';
    src: url('../../fonts/OpenSans-BoldItalic.eot');
    src: url('../../fonts/OpenSans-BoldItalic.eot?#iefix') format('embedded-opentype'),
        url('../../fonts/OpenSans-BoldItalic.woff') format('woff'),
        url('../../fonts/OpenSans-BoldItalic.ttf') format('truetype'),
        url('../../fonts/OpenSans-BoldItalic.svg#open_sansbold_italic') format('svg');
    font-weight: bold;
    font-style: italic;
}

@font-face {
    font-family: 'Open Sans';
    src: url('../../fonts/OpenSans-Italic.eot');
    src: url('../../fonts/OpenSans-Italic.eot?#iefix') format('embedded-opentype'),
        url('../../fonts/OpenSans-Italic.woff') format('woff'),
        url('../../fonts/OpenSans-Italic.ttf') format('truetype'),
        url('../../fonts/OpenSans-Italic.svg#open_sansitalic') format('svg');
    font-weight: normal;
    font-style: italic;
}

$gray: #808080;
$lightgray: #cfcfcf;
$bggray: #f8f8f8;
$yellow: #faba00;

html,
body {
    height: 100%;
}

body {
    background-color: white;
    color: $gray;
    padding: 0;
    margin: 0;
    font-size: 16px;
    line-height: 1.4;
    font-family: 'Open Sans', sans-serif;
}

.yellow-border {
    border-color: $yellow;
}

.mui-appbar {
    background-color: white;
    color: black;
    text-align: center;
    border-bottom: 1px solid $lightgray;
    height: 64px;

    .brand {
        border-right: 1px solid $lightgray;
        height: 64px;

        .logo {
            height: 33px;
            margin: 15px;
        }
    }

    .filter {
        margin-top: 15px;
        display: inline-flex;

        .mui-textfield {
            display: inline-block;
            margin-bottom: 0;
            padding-top: 0;
            border: 1px solid $lightgray;

            input {
                border-bottom: none;
                margin-left: 10px;
                width: 400px;
                text-align: center;
            }

            &.yellow-border {
                border-color: $yellow;
            }
        }

        img {
            display: inline-block;
            max-width: 20px;
            padding: 6px;
            border-width: 1px 0 1px 1px;
            border-style: solid;
            border-color: $lightgray;

            &.yellow-border {
                border-color: $yellow;
            }
        }
    }

    .menu {
        border-left: 1px solid $lightgray;
        height: 64px;

        .profile-icon {
            width: 33px;
            height: 33px;
            margin: 15px;
            border: 1px solid $gray;
        }
    }
}

.search-mobile {
    display: none;
    height: 0;
    visibility: hidden;
}

.content {
    background-color: $bggray;
    min-height: 100%;
    padding: 20px;

    .app-grid {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;

        .app-tile {
            margin: 20px;
            flex-basis: auto;
            text-align: center;
            max-width: 192px;

            &:hover {
                text-decoration: none;
                color: black;
            }

            .app-logo {
                background-color: white;
                border: 1px solid $lightgray;
                padding: 20px;
                width: 150px;
                height: 150px;
                display: table-cell;
                vertical-align: middle;

                img {
                    display: block;
                    margin: 0 auto;
                    max-width: 140px;
                    max-height: 140px;
                }

                &.yellow-border {
                    border-color: $yellow;
                }
            }

            .app-name {
                color: black;
            }
        }
    }
}

footer {
    height: 60px;
    background-color: black;
    border-top: 1px solid $lightgray;
    padding-top: 35px;

    .mui-container {
        max-width: 450px;
    }

    img {
        vertical-align: middle;
    }

    a {
        color: $gray;

        &:hover {
            color: $lightgray;
            text-decoration: none;
        }
    }
}

@media all and (max-width: 767px) {

    .mui-appbar .filter .mui-textfield input {
        width: 280px;
    }
}

@media all and (max-width: 543px) {

    .mui-appbar {

        .menu {
            height: 64px;

            .profile-icon {
                display: block;
                width: 33px;
                height: 33px;
                margin: 15px auto;
                border: 1px solid $gray;
            }
        }

        .search-button {
            height: 65px;
            background-image: url('../../img/search.svg');
            background-repeat: no-repeat;
            background-position: center center;

            &.invert {
                background-color: black;
                color: $lightgray;
                background-image: url('../../img/search-w.svg');
            }

            a {
                display: block;
                width: 40px;
                height: 40px;
                margin: 10px auto;
            }
        }
    }

    .search-mobile {
        background-color: black;
        height: 64px;
        visibility: visible;

        .mui-textfield {
            width: 80%;
            margin: auto;

            input {
                color: $lightgray;
                text-align: center;

                &::placeholder {
                    color: $gray;
                }

                &:focus {
                    border: none;
                }
            }
        }
    }

    .content {
        padding: 10px;

        .app-grid {

            .app-tile {
                margin: 10px;
                max-width: 122px;

                .app-logo {
                    padding: 10px;
                    width: 100px;
                    height: 100px;

                    img {
                        max-width: 90px;
                        max-height: 90px;
                    }
                }
            }
        }
    }

    footer {
        font-size: 0.8em;
        height: 50px;

        .mui-container {
            max-width: 100%;
        }

        .mui-col-xs-4 {
            padding-left: 5px;
            padding-right: 5px;
        }

        img {
            max-width: 18px;
        }
    }
}

